    from RDKit conformers (Issue #2468, PR #2707)
  * Added the `Aromaticities` topology attribute, and the `aromatic` selection 
    token (Issue #2468, PR #2707)
  * Added the `from_smiles` classmethod to the Universe (Issue #2468, PR #2707)
  * Added computation of Mean Squared Displacements (#2438, PR #2619)

Changes
  * Removes support for passing `atoms` to XYZWriter. (Issue #2739, PR #2754)
  * Removes; deprecated support for using Writer.write(Timestep), deprecated
    Writer.write_next_timestep, use write() instead. (Issue #2739)
  * Removes deprecated density_from_Universe, density_from_PDB, Bfactor2RMSF,
    and notwithin_coordinates_factory from MDAnalysis.analysis.density
    (Issue #2739)
  * Removes deprecated ProgressMeter (Issue #2739)
  * Removes deprecated MDAnalysis.units.N_Avogadro (PR #2737)
  * Dropped Python 2 support

Deprecations


06/09/20 richardjgowers, kain88-de, lilyminium, p-j-smith, bdice, joaomcteixeira,
         PicoCentauri, davidercruz, jbarnoud, RMeli, IAlibay, mtiberti, CCook96,
         Yuan-Yu, xiki-tempula, HTian1997, Iv-Hristov, hmacdope, AnshulAngaria,
         ss62171, Luthaf, yuxuanzhuang, abhishandy, mlnance, shfrz, orbeckst,
         wvandertoorn, cbouy, AmeyaHarmalkar, Oscuro-Phoenix, andrrizzi, WG150,
         tylerjereddy, Marcello-Sega

  * 1.0.0

Fixes
  * MOL2Writer now accepts both Universes and AtomgGroups (Issue #2717)
  * Use user-provided `remark` in `XYZWriter` (Issue #2692)
  * Added more informative error messages about topology attributes
    (Issue #2565)
  * Made NoDataError a subclass of ValueError *and* AttributeError
    (Issue #2635)
  * Fixed select_atoms("around 0.0 ...") selections and capped_distance 
    causing a segfault (Issue #2656 PR #2665)
  * `PDBWriter` writes unitary `CRYST1` record (cubic box with sides of 1 Å)
    when `u.dimensions` is `None` or `np.zeros(6)` (Issue #2679, PR #2685)
  * Ensures principal_axes() returns axes with the right hand convention (Issue #2637)