@@ -564,7 +564,6 @@ if __name__ == '__main__':
           'joblib>=0.12',
           'scipy>=1.0.0',
           'matplotlib>=1.5.1',
-          'mock',
           'tidynamics>=1.0.0',
           'tqdm>=4.43.0',
     ]
