@@ -184,7 +184,6 @@ if __name__ == '__main__':
               'pytest>=3.3.0', # Raised to 3.3.0 due to Issue 2329
               'hypothesis',
               'psutil>=4.0.2',
-              'mock>=2.0.0',  # replace with unittest.mock in python 3 only version
               'tidynamics>=1.0.0'
           ],
           # had 'KeyError' as zipped egg (2MB savings are not worth the
