@@ -32,6 +32,7 @@ Enhancements
   * Added computation of Mean Squared Displacements (#2438, PR #2619)
 
 Changes
+  * Replaces use of mock in favour of unittest.mock (Issue #2777)
   * Removes support for passing `atoms` to XYZWriter. (Issue #2739, PR #2754)
   * Removes; deprecated support for using Writer.write(Timestep), deprecated
     Writer.write_next_timestep, use write() instead. (Issue #2739)
